script for main , script for product

--- a/Products.html
+++ b/Products.html
@@ -6,6 +6,6 @@
 <body>
     
     <div id="main"></div>
-    <script src="./script.js"></script>
+    <script src="./scriptForProducts.js"></script>
 </body>
 </html>
