--- a/Products.html
+++ b/Products.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <link rel="stylesheet" href="./fontawesome-free-6.5.2-web/css/all.min.css">
 </head>
 <body>
     
-    <a href="./cart.html" target="_blank"><img style="height: 30px; width: 30px" src="./rss/1413908.png" alt=""></a> <p id="items" style="display: inline-block;">0</p>
     <div id="main"></div>
     <script src="./scriptForProducts.js"></script>
 </body>
