--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login-style.css">
 </head>
 <body>
     <div class="login-container">
@@ -29,6 +29,6 @@
         <p>Already have an account? <button id="loginBtn">Login</button></p>
     </div>
 
-    <script src="logic.js"></script>
+    <script src="login-logic.js"></script>
 </body>
 </html>
