--- a/Products.html
+++ b/Products.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="./fontawesome-free-6.5.2-web/css/all.min.css">
+    <link rel="stylesheet" href="products-style.css">
 </head>
 <body>
     
