--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
 
     <footer id="foot">
         <button type="button" class="FOOTbtn" id ="footbtn1">
-                <i class="fa-solid fa-house fa-2xl" style="color: #1d2430; "  id="b1" ></i>
+                <i class="fa-solid fa-house fa-xl" style="color: #1d2430; "  id="b1" ></i>
          </button>
          
         <button type="button" class="FOOTbtn" id="searching">
-                <i class="fa-solid fa-magnifying-glass fa-2xl"
+                <i class="fa-solid fa-magnifying-glass fa-xl"
                     style="color: #1d2430;" id="b2"></i> 
             </button>
         <button type="button" class="FOOTbtn">
-                <i class="fa-solid fa-user fa-2xl" style="color: #1d2430;" id="b3"></i> 
+                <i class="fa-solid fa-user fa-xl" style="color: #1d2430;" id="b3"></i> 
         </button>
 
     </footer>
