--- a/Product.html
+++ b/Product.html
@@ -6,18 +6,34 @@
     <title>Document</title>
 
      <style>
-        .product {
+        #container {
             border: 1px solid #363333;
             padding: 10px;
             margin: 10px;
             max-width:100%;
         }
-        .product img {
+        #container img {
             max-width: 20%;
         }
     </style>
 </head>
 <body>
+
+    <div id="container">
+
+        <h2 id="p_name">
+
+        </h2>
+
+        <img id="p_image">
+
+        <p id="p_category"> </p>
+        <p id="p_id"></p>
+        <p id="p_decsription"></p>
+        <p id="p_price"></p>
+        <p id="p_size"></p>
+
+    </div>
     <div id="product-display"></div>
     <script src="scriptOneProduct.js"></script>
     
