--- a/cart.html
+++ b/cart.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <link rel="stylesheet" href="cartstyle.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.5.2-web/css/all.min.css">
+
 </head>
 <body>
     <h2>Your shopping cart</h2>
