--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 
     account.addEventListener("click", function() {
-      window.location.href = "./account.html";})
+      window.location.href = "./Account.Html";})
 
 
     
