--- a/favourite.html
+++ b/favourite.html
@@ -17,6 +17,8 @@
     <!-- <div id="container"> -->
 
         <div id="hh"></div>
+        <div id="empty"></div>
+        
         <div id="product_fav">
             <p id="p_name"></p>
             <img id="p_image">
