HANDLE THE PROJECT

--- a/Buy/buy.html
+++ b/Buy/buy.html
@@ -17,7 +17,7 @@
     </form>
     <label id="paymentlabel" for="">Payment</label><br>
     <div id="payment">
-        <img id="pay" src="./rss/cardspay.png"><br>
+        <img id="pay" src="../rss/cardspay.png"><br>
         <input id="cardnumber" type="text" placeholder="Card number"><br>
         <input id="security" type="text" placeholder="Security Code"><br>
         <input id="cardName" type="text" placeholder="Name on Card"><br>
