--- a/cart/cart.html
+++ b/cart/cart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="cartstyle.css">
-    <link rel="stylesheet" href="./fontawesome-free-6.5.2-web/css/all.min.css">
+    <link rel="stylesheet" href="../fontawesome-free-6.5.2-web/css/all.min.css">
 
 </head>
 <body>
