--- a/products/Products.html
+++ b/products/Products.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="./fontawesome-free-6.5.2-web/css/all.min.css">
-    <link rel="stylesheet" href="products-style.css">
+    <link rel="stylesheet" href="../fontawesome-free-6.5.2-web/css/all.min.css">
+    <link rel="stylesheet" href="./products-style.css">
 </head>
 <body>
 
