--- a/cart/cart.html
+++ b/cart/cart.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-    <h2>Your shopping cart</h2>
+    <h2 id="h2Text">Your shopping cart</h2>
     <div id="cartdiv">
 
     </div>
