--- a/products/Products.html
+++ b/products/Products.html
@@ -22,6 +22,7 @@
         </div>
     </div>
     <div id="main"></div>
+    <div id="foot"></div>
     <script src="./scriptForProducts.js"></script>
 </body>
 </html>
