--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
 
     <footer id="foot">
         <button type="button" class="FOOTbtn" id ="footbtn1">
-                <i class="fa-solid fa-house fa-xl" style="color: #532200; "  id="b1" ></i>
+                <i class="fa-solid fa-house fa-xl" style="color:  #14202E; "  id="b1" ></i>
          </button>
          
         <button type="button" class="FOOTbtn" id="searching">
                 <i class="fa-solid fa-magnifying-glass fa-xl"
-                    style="color: #532200;" id="b2"></i> 
+                    style="color:  #14202E;" id="b2"></i> 
             </button>
         <button type="button" class="FOOTbtn" id="footbtn2">
-                <i class="fa-solid fa-user fa-xl" style="color: #532200;" id="b3"></i> 
+                <i class="fa-solid fa-user fa-xl" style="color: #14202E;" id="b3"></i> 
         </button>
 
     </footer>
