--- a/cart/cart.html
+++ b/cart/cart.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="cartstyle.css">
     <link rel="stylesheet" href="../fontawesome-free-6.5.2-web/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
 <body>
@@ -10,6 +11,34 @@
     <div id="cartdiv">
 
     </div>
+    <footer id="footer">
+        <div class="social-media">
+            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <!-- <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a> -->
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+        
+        <div class="team"> <br/>
+            <p>Made by:</p>
+            <a href="https://www.linkedin.com/in/ahmed-elghoul-61620718a/" target="_blank"><i class="fab fa-linkedin"></i> Ahmed Elghoul</a>
+            <a href="https://www.linkedin.com/in/kerolos-awny-07807118b/" target="_blank"><i class="fab fa-linkedin"></i> Kerolos Awny</a>
+            <a href="https://www.linkedin.com/in/mohammed-abdelal-096a67249/" target="_blank"><i class="fab fa-linkedin"></i> Mohammed Abdelal</a>
+            <a href="https://www.linkedin.com/in/mennatollah-mohamed-6a4424217/" target="_blank"><i class="fab fa-linkedin"></i> Mennatollah Mohamed</a>
+            <a href="https://www.linkedin.com/in/walid-nader-233237159/" target="_blank"><i class="fab fa-linkedin"></i> Walid Nader</a>
+        </div>
+        <br/>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Contact Us</a>
+            <a href="#">About Us</a>
+        </div>
+        <br/>
+        <div class="footer-copy">
+            <p>&copy; 2024 Our Team. All rights reserved.</p>
+        </div>
+    </footer>
     <script src="./cart.js"></script>
 </body>
 </html>
