--- a/terms/Terms.html
+++ b/terms/Terms.html
@@ -13,14 +13,14 @@
          replaced shall be clarified. 4- In case the product is damage or not
         match the displayed image in website or sent wrong size or color or wrong item,
        the problem will be clarified with clear images within a maximum of two days from receipt.
-        5- "Void" will bear the full shipping cost in the case the product is defective or sent wrong product             or size or color with promise to exchange or return it. 6- In case that the replacement or return is
+        5- "Down Town" will bear the full shipping cost in the case the product is defective or sent wrong product             or size or color with promise to exchange or return it. 6- In case that the replacement or return is
               due to a reason outside of the above, the customer will bear the full shipping cost for exchange or 
               return. 7- If a problem appears with the product after use, the problem is communicated and sent in 
               a detailed written form and clear pictures at the same time the problem appears. 8- In case that the
                product requires quality check, the product will be received and examined by the quality department,
                 and will feedback customer within a maximum 48 hours from receiving order at the company’s
                  headquarters with the appropriate procedure with the status of the order. 
-                 9- In case that the customer benefited from an offer from the "SUTRA" offers, 
+                 9- In case that the customer benefited from an offer from the "Down Town" offers, 
                  and after the exchange or refund violated the terms of the offer, the offer will be canceled.
                   10- Replaced orders will be delivered within 2 to 5 working days. Replacement and 
                   return orders are processed within 48 working hours Refund methods: In the case of 
