--- a/oneProduct/Product.html
+++ b/oneProduct/Product.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../fontawesome-free-6.5.2-web/css/all.min.css">
-    <link rel="stylesheet" href="./products-style.css">
     <title>Document</title>
 
     <style>
@@ -38,14 +36,19 @@
 
             <h2 id="p_name"></h2>
 
-            <div class="gallery-container" style="display: flex; width: 40%;">
+            <!-- <div class="gallery-container" style="display: flex;"> -->
  
                 <div class="main-image" style="display: inline-block;">
                     <img id="main-image" src="">
 
                 </div>
 
-               
+                <div id="pras" style="display: inline-block;">
+                    <p id="p_size"></p>
+                    <p id="p_decsription"></p>
+                    <p id="p_price"></p>
+                    <div id="discound"></div>
+                </div>
 
                 <div class="thumbnails" style="display: inline-block; text-wrap: wrap; position: relative; left: 20px;">
 
@@ -54,15 +57,15 @@
                     <img src="" alt="" id="img3" style="margin: 15px;">
 
                 </div>
+
+            <div id="pras" style="display: inline-block; width: 40%;">
+                <p id="p_size"></p>
+                <p id="p_decsription"></p>
+                <p id="p_price"></p>
+                <div id="discound"></div>
             </div>
 
-                <div id="pras" style="display: inline-block; width: 40%;">
-                    <p id="p_size"></p>
-                    <p id="p_decsription"></p>
-                    <p id="p_price"></p>
-                    <div id="discound"></div>
-                </div>
-
+            <!-- </div> -->
            
 
         </div>
