--- a/Account Info/MyAccount.html
+++ b/Account Info/MyAccount.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Profile</title>
     <link rel="stylesheet" href="./MyAccount.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
   
@@ -12,7 +13,7 @@
 
 
     
-    <footer>
+    <footer id ="footer">
         <div class="social-media">
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
