new edit in login

--- a/login/home.html
+++ b/login/home.html
@@ -14,7 +14,7 @@
         #logoutBtn {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: #007BFF;
+            background-color: #14202E;
             color: white;
             border: none;
             cursor: pointer;
@@ -22,7 +22,7 @@
         }
 
         #logoutBtn:hover {
-            background-color: #0056b3;
+            background-color: #14202E;
         }
     </style>
 </head>
