changes to buy bage

--- a/Buy/buy.html
+++ b/Buy/buy.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="buy-style.css">
+    <link rel="stylesheet" href="..\Buy\buy-style.css">
 </head>
 <body>
     
     <div id="Body">
         <form action="">
             <label class="Clabel" for="Email">Contact</label><br>
-            <input id="Einput" type="text" placeholder="Email" required><br>
+            <input id="Einput" type="email" placeholder="Email" required><br>
             <input id="Pinput" type="text" placeholder="Phone" required><br>
             <label class="Dlabel" for="">Delivery</label><br>
             <input id="Fname" type="text" placeholder="First Name" required>
@@ -29,6 +29,6 @@
         </div>
         <button id="btnPay">Pay Now</button>
     </div>
-    <script src="buy.js"></script>
+    <script src="..\Buy\buy.js"></script>
 </body>
 </html>
