--- a/oneProduct/Product.html
+++ b/oneProduct/Product.html
@@ -93,7 +93,7 @@
         <br/>
         <div class="footer-links">
             <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
+            <a href="../terms/Terms.html">Terms of Service</a>
             <a href="#">Contact Us</a>
             <a href="#">About Us</a>
         </div>
