--- a/terms/Terms.html
+++ b/terms/Terms.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="..\terms\terms.css">
+
 </head>
 <body>
     <h3 style="text-align: center;">Terms & Conditions</h3>
-    <p>We hope that you are satisfied. In case you face any problem, we are honored to assist you through the following policy: You can make an exchange or return within 14 days of receiving the order and, the product should be is in its original condition with tags and packaging. You can exchange or return through "SUTRA" branches, need to Provide the invoice and the product are available in its original condition and within 14 days of receiving the product. It is possible to exchange or return through "SUTRA" branches within 14 days of receiving the product, need to provide the invoice and the product are available in its original condition.
+    <p>We hope that you are satisfied. In case you face any problem, we are honored to assist you through the following policy: You can make an exchange or return within 14 days of receiving the order and, the product should be is in its original condition with tags and packaging. You can exchange or return through "Down Town" branches, need to Provide the invoice and the product are available in its original condition and within 14 days of receiving the product. It is possible to exchange or return through "SUTRA" branches within 14 days of receiving the product, need to provide the invoice and the product are available in its original condition.
          Accessories are not exchanged or returned. How to exchange or 
          return: 1- Contact customer service through e-mail or customer 
          service number 2- Clarify the order number and mobile number. 
