--- a/oneProduct/Product.html
+++ b/oneProduct/Product.html
@@ -77,7 +77,7 @@
     <footer id="footer">
         <div class="social-media">
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <!-- <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a> -->
+            <a href="https://x.com/" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
