--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>workShop</title>
+    <link rel="icon" type="image/x-icon" href="./rss/Brown-logo.ico">
     <link rel="stylesheet" href="./fontawesome-free-6.5.2-web/css/all.min.css">
     <link rel="stylesheet" href="./Style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
