--- a/terms/Terms.html
+++ b/terms/Terms.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="..\terms\terms.css">
+    <link rel="icon" type="image/x-icon" href="./rss/Brown-logo.ico">
+
 
 </head>
 <body>
