--- a/products/Products.html
+++ b/products/Products.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="../fontawesome-free-6.5.2-web/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="./products-style.css">
+    <link rel="icon" type="image/x-icon" href="./rss/Brown-logo.ico">
+
 </head>
 <body>
 
