--- a/Buy/buy.html
+++ b/Buy/buy.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="..\Buy\buy-style.css">
-    <link rel="icon" type="image/x-icon" href="./rss/Brown-logo.ico">
-
+    <link rel="icon" type="image/x-icon" href="../rss/Brown-logo.ico">
 </head>
 <body>
     
