--- a/cart/cart.html
+++ b/cart/cart.html
@@ -4,8 +4,7 @@
     <link rel="stylesheet" href="cartstyle.css">
     <link rel="stylesheet" href="../fontawesome-free-6.5.2-web/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="./rss/Brown-logo.ico">
-
+    <link rel="icon" type="image/x-icon" href="../rss/Brown-logo.ico">
 </head>
 <body>
     <h2 id="h2Text">Your shopping cart</h2>
