--- a/login/login.html
+++ b/login/login.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="login-style.css">
-    <link rel="icon" type="image/x-icon" href="./rss/Brown-logo.ico">
-
+    <link rel="icon" type="image/x-icon" href="../rss/Brown-logo.ico"> 
 </head>
 <body>
     <div class="login-container">
